Mock up more responsive and changed the format of the signup sheet modal.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
                 <a class="ui header item borderless" href="#"><i class="soccer icon"></i> Rally</a>
             </div>
         </div>
-        <div class="ui grid container" style="margin-top: 40px">
-            <div class="three wide column">
+        <div class="ui grid stackable container" style="margin-top: 40px">
+            <div class="four wide column">
                 <h2 class="ui header">Days</h2>
                 <div class="ui vertical small menu">
                     <a href="#" class="item active">
@@ -30,8 +30,8 @@
                     </a>
                 </div>
             </div>
-            <div class="thirteen wide column">
-                <div class="ui cards">
+            <div class="twelve wide column">
+                <div class="ui three stackable cards">
                     <div class="card">
                         <div class="content">
                             <div class="header">7:30 AM</div>
@@ -141,9 +141,26 @@
             <div class="ui modal">
                 <div class="header">Sign Up Sheet</div>
                 <div class="content">
-                    <h3 class="ui header">Tuesday January 03, 2017</h3>
-                    <h4 class="ui header">07:30 AM</h4>
-                    <h4 class="ui header">Field 1</h4>
+                    <div class="ui list">
+                        <div class="item">
+                            <i class="calendar icon"></i>
+                            <div class="content">
+                                Tuesday January 03, 2017
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="clock icon"></i>
+                            <div class="content">
+                                07:30 AM
+                            </div>
+                        </div>
+                        <div class="item">
+                            <i class="marker icon"></i>
+                            <div class="content">
+                                Field 1
+                            </div>
+                        </div>
+                    </div>
                     <form class="ui form">
                         <div class="field">
                             <label>First Name</label>
@@ -165,7 +182,7 @@
                 </div>
                 <div class="actions">
                     <div class="ui cancel button">Cancel</div>
-                    <div class="ui approve button">Submit</div>
+                    <div class="ui approve blue button">Submit</div>
                 </div>
             </div>
         </div>
