Change Days to Dates. Added Times header. Modified dates format.

--- a/index.html
+++ b/index.html
@@ -14,23 +14,26 @@
         </div>
         <div class="ui grid stackable container" style="margin-top: 40px">
             <div class="four wide column">
-                <h2 class="ui header">Days</h2>
+                <h2 class="ui header">Dates</h2>
                 <div class="ui vertical small menu">
                     <a href="#" class="item active">
-                        <h4 class="ui header">2017-01-03</h4> 
+                        <h4 class="ui header">01/03/2017</h4> 
                         <p>5 slots available</p>
                     </a>
                     <a href="#" class="item">
-                        <h4 class="ui header">2017-01-04</h4>
+                        <h4 class="ui header">01/04/2017</h4>
                         <p>7 slots available</p>
                     </a>
                     <a href="#" class="item">
-                        <h4 class="ui header">2017-01-05</h4>
+                        <h4 class="ui header">01/05/2017</h4>
                         <p>0 slots available</p>
                     </a>
                 </div>
             </div>
             <div class="twelve wide column">
+                <div class="ui row" style="margin-bottom:0.83em">
+                    <h2 class="ui header">Times</h2>
+                </div>
                 <div class="ui three stackable cards">
                     <div class="card">
                         <div class="content">
